[tool.poetry]
name = "pallet-aging-gh"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
torch = "^2.3.1"
seaborn = "^0.13.2"
pyqt6 = "^6.7.0"
scikit-learn = "^1.5.1"
scikit-image = "^0.24.0"
openpyxl = "^3.1.5"
tqdm = "^4.66.4"
pandas = "^2.2.2"
numpy = "^2.0.1"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
